{
  "version": 4,
  "terraform_version": "1.8.2",
  "serial": 54,
  "lineage": "68d02b1c-d49d-a16a-19c3-6e68cd071e1c",
  "resources": [
    {
      "module": "module.bastion",
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].dev",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01cd4de4363ab6ee8",
            "arn": "arn:aws:ec2:us-west-2:992382446249:instance/i-04cd8659519c5b34a",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04cd8659519c5b34a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "stopped",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Bastion_Dev",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-04339b75d40b5bcdc",
            "private_dns": "ip-10-0-1-254.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.254",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0d72652111973dcda",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01da28bc5ec3fae76",
            "tags": {
              "Environment": "dev",
              "Name": "Bastion Dev"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Bastion Dev"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02aed9cb5550b860e"
            ]
          },
          "dependencies": [
            "module.bastion.aws_security_group.bastion_sg",
            "module.vpc.aws_subnet.dev_public_subnet",
            "module.vpc.aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.bastion",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].dev",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:992382446249:security-group/sg-02aed9cb5550b860e",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02aed9cb5550b860e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20240519125100657000000001",
            "name_prefix": "terraform-",
            "owner_id": "992382446249",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "Bastion Dev Security Group"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Bastion Dev Security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-05a999811b0131c7c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "dev_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].dev",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:992382446249:internet-gateway/igw-088303d61a349b3ec",
            "id": "igw-088303d61a349b3ec",
            "owner_id": "992382446249",
            "tags": {
              "Environment": "dev",
              "Name": "dev-vpc-igw"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-vpc-igw"
            },
            "vpc_id": "vpc-05a999811b0131c7c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dev_private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].dev",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:992382446249:route-table/rtb-0f1ae7e7f5f84c624",
            "id": "rtb-0f1ae7e7f5f84c624",
            "owner_id": "992382446249",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "dev-vpc-private-rt"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-vpc-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-05a999811b0131c7c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dev_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].dev",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:992382446249:route-table/rtb-018c080941c3de2f6",
            "id": "rtb-018c080941c3de2f6",
            "owner_id": "992382446249",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-088303d61a349b3ec",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "dev-vpc-public-rt"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-vpc-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-05a999811b0131c7c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.dev_igw",
            "module.vpc.aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dev_private_rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].dev",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-072b848108e73a579",
            "route_table_id": "rtb-0f1ae7e7f5f84c624",
            "subnet_id": "subnet-054c2a06ab7f05e88"
          },
          "dependencies": [
            "module.vpc.aws_route_table.dev_private_rt",
            "module.vpc.aws_subnet.dev_private_subnet",
            "module.vpc.aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dev_public_rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].dev",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-096a59c0c6519566f",
            "route_table_id": "rtb-018c080941c3de2f6",
            "subnet_id": "subnet-01da28bc5ec3fae76"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.dev_igw",
            "module.vpc.aws_route_table.dev_public_rt",
            "module.vpc.aws_subnet.dev_public_subnet",
            "module.vpc.aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].dev",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:992382446249:subnet/subnet-054c2a06ab7f05e88",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-054c2a06ab7f05e88",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "992382446249",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "dev-vpc-private-subnet"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-vpc-private-subnet"
            },
            "vpc_id": "vpc-05a999811b0131c7c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].dev",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:992382446249:subnet/subnet-01da28bc5ec3fae76",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01da28bc5ec3fae76",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "992382446249",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "dev-vpc-public-subnet"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-vpc-public-subnet"
            },
            "vpc_id": "vpc-05a999811b0131c7c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "dev_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].dev",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:992382446249:vpc/vpc-05a999811b0131c7c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c496a814741b9417",
            "default_route_table_id": "rtb-084dc3be92347e1ef",
            "default_security_group_id": "sg-0ab8176f34073ea04",
            "dhcp_options_id": "dopt-07032d75a92666160",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05a999811b0131c7c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-084dc3be92347e1ef",
            "owner_id": "992382446249",
            "tags": {
              "Environment": "dev",
              "Name": "dev-vpc"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.web_server",
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].dev",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01cd4de4363ab6ee8",
            "arn": "arn:aws:ec2:us-west-2:992382446249:instance/i-020077c4e2015c61f",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-020077c4e2015c61f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Web_Dev",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c66c9adced7bfc75",
            "private_dns": "ip-10-0-2-139.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.139",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-010bc904c2ac7b22d",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-054c2a06ab7f05e88",
            "tags": {
              "Environment": "dev",
              "Name": "Web Dev"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Web Dev"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05fe4edc49e71e9e8"
            ]
          },
          "dependencies": [
            "module.bastion.aws_security_group.bastion_sg",
            "module.vpc.aws_subnet.dev_private_subnet",
            "module.vpc.aws_vpc.dev_vpc",
            "module.web_server.aws_security_group.web_sg",
            "module.windows_bastion.aws_security_group.windows_bastion_sg"
          ]
        }
      ]
    },
    {
      "module": "module.web_server",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].dev",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:992382446249:security-group/sg-05fe4edc49e71e9e8",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05fe4edc49e71e9e8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-086e358fff9b8c0cc"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": null,
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02aed9cb5550b860e"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20240519132147517200000001",
            "name_prefix": "terraform-",
            "owner_id": "992382446249",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "Web Dev Security Group"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Web Dev Security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-05a999811b0131c7c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.bastion.aws_security_group.bastion_sg",
            "module.vpc.aws_vpc.dev_vpc",
            "module.windows_bastion.aws_security_group.windows_bastion_sg"
          ]
        }
      ]
    },
    {
      "module": "module.windows_bastion",
      "mode": "managed",
      "type": "aws_instance",
      "name": "windows_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].dev",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c0ec0a3a3a4c34c0",
            "arn": "arn:aws:ec2:us-west-2:992382446249:instance/i-08cc50ccafc2fa35d",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08cc50ccafc2fa35d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Windows_Bastion_Dev",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0488fbe465edec6d8",
            "private_dns": "ip-10-0-1-251.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.251",
            "public_ip": "52.37.2.44",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0610a28ddca2cf164",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01da28bc5ec3fae76",
            "tags": {
              "Environment": "dev",
              "Name": "Windows Bastion Dev"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Windows Bastion Dev"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-086e358fff9b8c0cc"
            ]
          },
          "dependencies": [
            "module.vpc.aws_subnet.dev_public_subnet",
            "module.vpc.aws_vpc.dev_vpc",
            "module.windows_bastion.aws_security_group.windows_bastion_sg"
          ]
        }
      ]
    },
    {
      "module": "module.windows_bastion",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "windows_bastion_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].dev",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:992382446249:security-group/sg-086e358fff9b8c0cc",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-086e358fff9b8c0cc",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3389,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3389
              }
            ],
            "name": "terraform-20240520141053174200000001",
            "name_prefix": "terraform-",
            "owner_id": "992382446249",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "Windows Bastion Dev Security Group"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Windows Bastion Dev Security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-05a999811b0131c7c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.dev_vpc"
          ]
        }
      ]
    }
  ]
}